<resources>
    <string name="app_name">GTFWallet</string>
    <string name="guild_surplus_times">剩余%d秒</string>
    <string name="phone_erro">手机号码错误</string>
    <string name="pass_erro">手机号与密码不匹配</string>
    <string name="pass_length_erro">密码长度应该为6-14位</string>
    <string name="not_register">用户未注册</string>
    <string name="is_register">用户已注册，请重新登录</string>


    <string name="hint_phone">请输入手机号码</string>
    <string name="hint_pass">请输入登录密码</string>
    <string name="btn_login">登  录</string>
    <string name="tv_register">注册账户?</string>
    <string name="tv_forget">忘记密码</string>
    <string name="customer_phone">客服热线:400-900-8800</string>

    <string name="create_wallet_title">创建钱包</string>
    <string name="create_wallet_pass_hint1">密码用户保护私钥和交易授权，强度非常重要</string>
    <string name="create_wallet_pass_hint2">钱包不用与存储密码，也无法帮你找回。请务必牢记</string>
    <string name="create_wallet_name_hinit">钱包名称</string>
    <string name="create_wallet_pass">钱包密码</string>
    <string name="create_wallet_repeat_pass">重复密码</string>
    <string name="create_wallet_pass_hint">密码提示</string>
    <string name="create_wallet_btn_confirm">立即创建</string>

    <string name="create_memorizing_world">助记词</string>
    <string name="create_memorizing_world_confirm">确认助记词</string>
    <string name="descript">\t\tGTF Wallet(以下简称GTF钱包）是一款打通数字货币和实体世界的钱包应用，旨在解决用户管理多种数字货币的不便、兑换交易过程繁杂以及应用场景不足的问题，致力于为大众提供一个安全、便捷、高效的数字资产管理工具，丰富区块链技术和数字货币的应用场景，推动区块链技术服务于商业进步和社会发展。</string>




    <!--用户登陆相关-->
    <string name="phone_hint">请输入11位手机号码</string>
    <string name="login_title">手机号登录</string>
    <string name="pass_hint">请输入6–16位数字与字母密码</string>
    <string name="input_pass">请输入密码</string>
    <string name="login_string">登录</string>
    <string name="another_type">其他登录方式</string>
    <string name="qq_type">qq登陆</string>
    <string name="weixin_type">微信登陆</string>
    <string name="agreement">注册或登录，即代表您已同意《用户协议》</string>

    <string name="register_string">注册</string>
    <string name="go_register">立即注册</string>
    <string name="go_forget_pass">忘记密码</string>


    <!--用户注册相关-->
    <string name="register_title">手机号注册</string>
    <string name="code_hint">请输入验证码</string>
    <string name="get_code_hint">获取验证码</string>


    <!--找回密码-->
    <string name="next">下一步</string>
    <string name="set_pass_hint">重新设置登陆密码</string>
    <string name="confirm">确认</string>

    <!--用虎协议-->
    <string name="protocol">用户协议</string>

</resources>
