<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="echat.future.cn.echat.my.view.LoginActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="20dp"
            android:background="@mipmap/toobar"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:navigationIcon="@mipmap/ic_back"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="用户注册"
                    android:textSize="17sp"
                    android:textColor="#5A3B1A"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.Toolbar>
        </RelativeLayout>

        <sz.tianhe.baselib.weight.CircleImageView
            android:id="@+id/logo"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/phone"
            style="@style/LoginEditStyle"
            android:layout_marginTop="19dp"
            android:ems="11"
            android:hint="@string/phone_hint"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/pass"
            style="@style/LoginEditStyle"
            android:layout_marginTop="12.5dp"
            android:ems="11"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            >
            <EditText
                android:id="@+id/code"
                style="@style/LoginEditStyle"
                android:ems="11"
                android:hint="@string/code_hint"
                android:inputType="phone"/>
            <TextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:text="@string/get_code_hint"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_login_code"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:gravity="center"
                android:layout_marginRight="23dp"
                android:layout_height="23dp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/register"
            android:layout_marginTop="16dp"
            style="@style/LoginEditStyle"
            android:background="@mipmap/choose_btn_register"
            android:layout_height="50dp"
            android:textColor="#5A3B1A"
            android:textSize="16sp"
            android:paddingLeft="0dp"
            android:elevation="1dp"
            android:text="@string/register_string"
            android:gravity="center"
            />
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent" />

    </LinearLayout>
</layout>